k8s/inventory/deployment_inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    argocd.argoproj.io/instance: inventory
  name: inventory-fastapi
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-fastapi
  template:
    metadata:
      labels:
        app: inventory-fastapi
    spec:
      containers:
        - name: inventory
          image: 'mauvargas/inventory-fastapi:0.2'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
