k8s/inventory/validator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: mycontainer
    image: busybox
    command: ['sh', '-c', 'ls -l  && sleep 3600']
    volumeMounts:
    - name: workdir
      mountPath: /mnt/data
  volumes:
  - name: workdir
    emptyDir: {}
