k8s/inventory/inventory_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: testing
spec:
  selector:
    app: inventory-fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
