k8s/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-fastapi-service
  labels:
    run: inventory-fastapi-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: inventory-fastapi
