k8s/inventory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/product_request
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 80
